[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/OpenSans-Bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/ItemList.gd" type="Script" id=3]
[ext_resource path="res://resources/graphics/ui/drop_down.png" type="Texture" id=4]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 936, 735 )
modulate_color = Color( 0.5, 0.5, 0.5, 1 )

[node name="UI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="."]
margin_right = 1920.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "100"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="."]
margin_top = 1000.0
margin_right = 40.0
margin_bottom = 1080.0
custom_fonts/font = ExtResource( 2 )
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildMenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="BuildMenu"]
margin_left = 1750.0
margin_top = 540.0
margin_right = 1910.0
margin_bottom = 540.0
grow_vertical = 2
theme = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.7, 0.7, 0.7, 1 )
auto_height = true
fixed_icon_size = Vector2( 50, 50 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="allEnemiesDead" from="." to="BuildMenu/ItemList" method="_on_UI_allEnemiesDead"]
[connection signal="item_selected" from="BuildMenu/ItemList" to="BuildMenu/ItemList" method="_on_ItemList_item_selected"]
[connection signal="nothing_selected" from="BuildMenu/ItemList" to="BuildMenu/ItemList" method="_on_ItemList_nothing_selected"]
